# flow

./: .gitignore  Cargo.toml  README.md
docs/: note_taking_feature.md  requirements.md
src/: cli.rs  context.rs  db.rs  main.rs  models.rs
src/tui/: mod.rs
